update movie home style to fix z-index issue

--- a/src/app/pages/movie/movie.component.scss
+++ b/src/app/pages/movie/movie.component.scss
@@ -18,6 +18,10 @@
     -ms-filter: blur(5px);
     filter: blur(5px);
 }
+.movie__home {
+    position: relative;
+    z-index: 1;
+}
 #movie__header {
     color: #ffffff;
     position: relative;
